<resources>
    <string name="app_name">SmashNotes</string>
    <string name="match_record_label">Record Note</string>
    <string name="stats_label">Statistics</string>
    <string name="menu_history_title">History</string>
    <string name="menu_stats_title">Stats</string>
    <string name="menu_notes_title">Notes</string>
    <string name="menu_save_record_title">Save</string>
    <string name="menu_delete_record_title">Delete</string>
    <string name="menu_group_type_title">Group Records</string>
    <string name="menu_BO3_group_type_title">Best of 3</string>
    <string name="record_button_text">Begin Recording</string>
    <string name="record_button_done_text">Done</string>
    <string name="win_button_text">Win</string>
    <string name="loss_button_text">Loss</string>
    <string name="character_hint">Character</string>
    <string name="stage_hint">Stage</string>
    <string name="hazards_label">Hazards</string>
    <string name="result_label">Result</string>
    <string name="gsp_hint">GSP</string>
    <string name="notes_hint">Notes</string>
    <string name="hazards_on_switch_label">Hazards on</string>
    <string name="hazards_off_switch_label">Hazards off</string>
    <string name="player_name_hint">Name</string>
    <string name="game_vs_text">v</string>
    <string name="menu_BO5_group_type_title">Best of 5</string>
    <string name="menu_any_group_type_title">Any</string>
    <string name="menu_game_type_title">Game Type</string>
    <string name="menu_tournament_game_type_menu_item">Tournament</string>
    <string name="menu_practice_game_type_title">Practice</string>
    <string name="menu_quickplay_game_type_title">Quickplay</string>
    <string-array name="stagesUltimate">
        <item>Battlefield</item>
        <item>Big Battlefield</item>
        <item>Final Destination</item>
        <item>Peach\'s Castle</item>
        <item>Kongo Jungle</item>
        <item>Hyrule Castle</item>
        <item>Super Happy Tree</item>
        <item>Dream Land</item>
        <item>Saffron City</item>
        <item>Mushroom Kingdom</item>
        <item>Princess Peach\'s Castle</item>
        <item>Rainbow Cruise</item>
        <item>Kong Falls</item>
        <item>Jungle Japes</item>
        <item>Great Bay</item>
        <item>Temple</item>
        <item>Brinstar</item>
        <item>Yoshi\'s Island (Melee)</item>
        <item>Yoshi\'s Story</item>
        <item>Fountain of Dreams</item>
        <item>Green Greens</item>
        <item>Corneria</item>
        <item>Venom</item>
        <item>Pokemon Stadium</item>
        <item>Onett</item>
        <item>Mushroom Kingdom II</item>
        <item>Brinstar Depths</item>
        <item>Big Blue</item>
        <item>Fourside</item>
        <item>Delfino Plaza</item>
        <item>Mushroomy Kingdom</item>
        <item>Figure-8 Circuit</item>
        <item>WarioWare, Inc.</item>
        <item>Bridge of Eldin</item>
        <item>Norfair</item>
        <item>Frigate Orpheon</item>
        <item>Yoshi\'s Island</item>
        <item>Halberd</item>
        <item>Lylat Cruise</item>
        <item>Pokemon Stadium 2</item>
        <item>Port Town Aero Dive</item>
        <item>Castle Siege</item>
        <item>Distant Planet</item>
        <item>Smashville</item>
        <item>New Pork City</item>
        <item>Summit</item>
        <item>Skyworld</item>
        <item>Shadow Moses Island</item>
        <item>Luigi\'s Mansion</item>
        <item>Pirate Ship</item>
        <item>Spear Pillar</item>
        <item>75 m</item>
        <item>Mario Bros.</item>
        <item>Hanenbow</item>
        <item>Green Hill Zone</item>
        <item>3D Land</item>
        <item>Golden Plains</item>
        <item>Paper Mario</item>
        <item>Gerudo Valley</item>
        <item>Dream Land GB</item>
        <item>Unova Pokemon League</item>
        <item>Prism Tower</item>
        <item>Mute City SNES</item>
        <item>Magicant</item>
        <item>Arena Ferox</item>
        <item>Reset Bomb Forest</item>
        <item>Tortimer Island</item>
        <item>Balloon Fight</item>
        <item>Living Room</item>
        <item>Find Mii</item>
        <item>Tomodachi Life</item>
        <item>PictoChat 2</item>
        <item>Mushroom Kingdom U</item>
        <item>Mario Galaxy</item>
        <item>Mario Circuit</item>
        <item>Skyloft</item>
        <item>The Great Cave Offensive</item>
        <item>Kalos Pokemon League</item>
        <item>Coliseum</item>
        <item>Flat Zone X</item>
        <item>Palutena\'s Temple</item>
        <item>Gamer</item>
        <item>Garden of Hope</item>
        <item>Town and City</item>
        <item>Wii Fit Studio</item>
        <item>Boxing Ring</item>
        <item>Gaur Plain</item>
        <item>Duck Hunt</item>
        <item>Wrecking Crew</item>
        <item>Pilotwings</item>
        <item>Wuhu Island</item>
        <item>Windy Hill Zone</item>
        <item>Wily Castle</item>
        <item>PAC-LAND</item>
        <item>Super Mario Maker</item>
        <item>Suzaku Castle</item>
        <item>Midgar</item>
        <item>Umbra Clock Tower</item>
        <item>New Donk City Hall</item>
        <item>Great Plateau Tower</item>
        <item>Moray Towers</item>
        <item>Dracula\'s Castle</item>
        <item>Mementos</item>
        <item>Yggdrasil\'s Altar</item>
        <item>Spiral Mountain</item>
        <item>King of Fighters Stadium</item>
    </string-array>
    <string-array name="stages43ds">
        <item>3D Land</item>
        <item>Arena Ferox</item>
        <item>Balloon Fight</item>
        <item>Battlefield</item>
        <item>Boxing Ring</item>
        <item>Brinstar</item>
        <item>Corneria</item>
        <item>Distant Planet</item>
        <item>Dream Land (64)</item>
        <item>Dream Land</item>
        <item>Duck Hunt</item>
        <item>Final Destination</item>
        <item>Find Mii</item>
        <item>Flat Zone 2</item>
        <item>Gaur Plain</item>
        <item>Gerudo Valley</item>
        <item>Golden Plains</item>
        <item>Green Hill Zone</item>
        <item>Hyrule Castle</item>
        <item>Jungle Japes</item>
        <item>Living Room</item>
        <item>Magicant</item>
        <item>Midgar</item>
        <item>Mushroomy Kingdom</item>
        <item>Mute City</item>
        <item>Pac-Maze</item>
        <item>Paper Mario</item>
        <item>Peach\'s Castle</item>
        <item>PictoChat 2</item>
        <item>Prism Tower</item>
        <item>Rainbow Road</item>
        <item>Reset Bomb Forest</item>
        <item>Spirit Train</item>
        <item>Super Mario Maker</item>
        <item>Suzaku Castle</item>
        <item>Tomodachi Life</item>
        <item>Tortimer Island</item>
        <item>Umbra Clock Tower</item>
        <item>Unova Pokemon League</item>
        <item>Warior Ware, Inc.</item>
        <item>Wily Castle</item>
        <item>Yoshi\'s Island (Brawl)</item>

    </string-array>
    <string-array name="stages4wiiu">
        <item>75m</item>
        <item>Battlefield</item>
        <item>Big Battlefield</item>
        <item>Boxing Ring</item>
        <item>Bridge of Eldin</item>
        <item>Castle Siege</item>
        <item>Coliseum</item>
        <item>Delfino Plaza</item>
        <item>Dream Land (64)</item>
        <item>Duck Hunt</item>
        <item>Final Destination</item>
        <item>Flat Zone X</item>
        <item>Gamer</item>
        <item>Garden of Hope</item>
        <item>Gaur Plain</item>
        <item>The Great Cove Offensive</item>
        <item>Halberd</item>
        <item>Hyrule Castle</item>
        <item>Jungle Hijinxs</item>
        <item>Kalos Pokemon League</item>
        <item>Kongo Jungle</item>
        <item>Luigi\'s Mansion</item>
        <item>Lylat Cruise</item>
        <item>Mario Circuit (Brawl)</item>
        <item>Mario Circuit</item>
        <item>Mario Galaxy</item>
        <item>Midgar</item>
        <item>Miiverse</item>
        <item>Mushroom Kingdom U</item>
        <item>Norfair</item>
        <item>Onett</item>
        <item>Orbital Gate Assault</item>
        <item>Pac-Land</item>
        <item>Palutena\'s Temple</item>
        <item>Peach\'s Castle</item>
        <item>Pilotwings</item>
        <item>Pirate Ship</item>
        <item>Pokemon Stadium 2</item>
        <item>Port Town Aero Dive</item>
        <item>Pyrosphere</item>
        <item>Skyloft</item>
        <item>Skyworld</item>
        <item>Smashville</item>
        <item>Super Mario Galaxy</item>
        <item>Super Mario Maker</item>
        <item>Suzaku Castle</item>
        <item>Temple</item>
        <item>Town and City</item>
        <item>Umbra Clock Tower</item>
        <item>Wii Fit Studio</item>
        <item>Wily Castle</item>
        <item>Windy Hill Zone</item>
        <item>Woolly World</item>
        <item>Wrecking Crew</item>
        <item>Wuhu Island</item>
        <item>Yoshi\'s Island (Melee)</item>
    </string-array>
    <string-array name="stagesBrawl">
        <item>75m</item>
        <item>Battlefield</item>
        <item>Bridge of Eldin</item>
        <item>Castle Siege</item>
        <item>Delfino Plaza</item>
        <item>Distant Planet</item>
        <item>Final Destination</item>
        <item>Flat Zone 2</item>
        <item>Frigate Orpheon</item>
        <item>Green Hill Zone</item>
        <item>Halberd</item>
        <item>Hanenbow</item>
        <item>Luigi\'s Mansion</item>
        <item>Lylat Cruise</item>
        <item>Mario Bros.</item>
        <item>Mario Circuit</item>
        <item>Mushroomy Kingdom</item>
        <item>New Pork City</item>
        <item>Norfair</item>
        <item>PictoChat</item>
        <item>Pirate Ship</item>
        <item>Pokemon Stadium 2</item>
        <item>Port Town Aero Dive</item>
        <item>Rumble Falls</item>
        <item>Shadow Moses Island</item>
        <item>Skyworld</item>
        <item>Smashville</item>
        <item>Spear Pillar</item>
        <item>Summit</item>
        <item>WarioWare, Inc.</item>
        <item>Yoshi\'s Island</item>
        <item>Big Blue</item>
        <item>Brinstar</item>
        <item>Corneria</item>
        <item>Green Greens</item>
        <item>Jungle Japes</item>
        <item>Onett</item>
        <item>Pokemon Stadium</item>
        <item>Rainbow Cruise</item>
        <item>Temple</item>
        <item>Yoshi\'s Island</item>
    </string-array>
    <string-array name="stagesMelee">
        <item>Battlefield</item>
        <item>Big Blue</item>
        <item>Brinstar</item>
        <item>Brinstar Depths</item>
        <item>Corneria</item>
        <item>Final Destination</item>
        <item>Flat Zone</item>
        <item>Fountain of Dreams</item>
        <item>Fourside</item>
        <item>Great Bay</item>
        <item>Green Greens</item>
        <item>Icicle Mountain</item>
        <item>Jungle Japes</item>
        <item>Kongo Jungle</item>
        <item>Mushroom Kingdom</item>
        <item>Mushroom Kingdom II</item>
        <item>Mute City</item>
        <item>Onett</item>
        <item>Poke Floats</item>
        <item>Pokemon Stadium</item>
        <item>Princess Peach\'s Castle</item>
        <item>Rainbow Cruise</item>
        <item>Temple</item>
        <item>Venom</item>
        <item>Yoshi\'s Island</item>
        <item>Yoshi\'s Story</item>
        <item>Dream Land</item>
        <item>Yoshi\'s Island (64)</item>
    </string-array>
    <string-array name="stages64">
        <item>Peach\'s Castle</item>
        <item>Congo Jungle</item>
        <item>Hyrule Castle</item>
        <item>Planet Zebes</item>
        <item>Mushroom Kingdom</item>
        <item>Yoshi\'s Island</item>
        <item>Dream Land</item>
        <item>Sector Z</item>
        <item>Saffron City</item>
    </string-array>
</resources>