<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Spinner
            android:id="@id/game_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/win_button"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/loss_button"
            android:text="@string/loss_button_text"
            android:backgroundTint="@color/lossButton"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/game_spinner"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/game_spinner"
            app:layout_constraintBottom_toBottomOf="@+id/game_spinner"
            app:layout_constraintEnd_toStartOf="@+id/win_button"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/win_button"
            android:text="@string/win_button_text"
            android:backgroundTint="@color/winButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@id/loss_button"
            app:layout_constraintEnd_toEndOf="parent"/>


    <include layout="@layout/player_character_view"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:id="@+id/player1"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintTop_toBottomOf="@id/win_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
    <include layout="@layout/player_character_view"
             android:id="@+id/player2"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             app:layout_constraintTop_toBottomOf="@+id/player1"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/stage_input_layout"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="@+id/player2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/player2"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/hazards_checkbox">
        <AutoCompleteTextView
                android:id="@+id/stage_choice"
                android:hint="@string/stage_hint"
                tools:text="STAGE"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:dropDownAnchor="@id/stage_input_layout"
                android:completionThreshold="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/hazards_checkbox"
            android:textColor="#808080"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintBottom_toBottomOf="@+id/stage_input_layout"
            app:layout_constraintTop_toTopOf="@+id/stage_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            />
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gsp_input_layout"
            app:layout_constraintHorizontal_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/hazards_checkbox"
            app:layout_constraintTop_toBottomOf="@+id/stage_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gsp"
                android:hint="@string/gsp_hint"
                android:inputType="number"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/match_notes_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/gsp_input_layout"
            app:layout_constraintStart_toStartOf="@+id/gsp_input_layout"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/gsp_input_layout"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/match_notes"
                android:inputType="textMultiLine"
                android:hint="@string/notes_hint"
                tools:text="Notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/session_history"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@id/match_notes_input_layout"
            app:layout_constraintStart_toStartOf="@id/match_notes_input_layout"
            app:layout_constraintTop_toBottomOf="@id/match_notes_input_layout"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>